--- a/ML/Supervised/Random forest/Random forest.ipynb
+++ b/ML/Supervised/Random forest/Random forest.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "polish-dodge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +14,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "broadband-heading",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +34,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "planned-onion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +44,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "religious-procurement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +54,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "convenient-tiger",
    "metadata": {},
    "outputs": [
     {
@@ -81,37 +76,36 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "local-material",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([4, 8, 6, 8, 0, 9, 5, 4, 1, 4, 7, 0, 4, 1, 4, 9, 6, 4, 3, 0, 5, 3,\n",
-       "       0, 0, 6, 8, 7, 4, 0, 6, 7, 2, 4, 4, 7, 8, 1, 4, 9, 5, 3, 8, 3, 2,\n",
-       "       4, 0, 9, 6, 5, 9, 6, 5, 1, 5, 5, 1, 5, 8, 1, 7, 3, 1, 0, 6, 6, 0,\n",
-       "       9, 3, 1, 4, 5, 1, 2, 4, 8, 4, 3, 9, 2, 7, 3, 9, 2, 4, 0, 4, 4, 6,\n",
-       "       4, 8, 0, 0, 9, 1, 0, 4, 8, 5, 4, 0, 6, 7, 6, 4, 4, 7, 2, 1, 7, 2,\n",
-       "       7, 2, 7, 1, 2, 7, 0, 2, 8, 4, 6, 0, 0, 4, 2, 7, 1, 4, 5, 3, 7, 8,\n",
-       "       8, 2, 5, 0, 7, 1, 0, 4, 2, 0, 8, 6, 6, 2, 4, 8, 1, 0, 7, 8, 0, 2,\n",
-       "       0, 1, 9, 3, 0, 1, 5, 7, 1, 3, 8, 8, 2, 0, 3, 2, 2, 0, 3, 7, 9, 2,\n",
-       "       0, 9, 6, 6, 3, 5, 8, 5, 8, 2, 7, 0, 9, 0, 4, 5, 5, 6, 0, 1, 7, 7,\n",
-       "       6, 7, 5, 8, 8, 6, 4, 7, 1, 6, 7, 1, 3, 1, 8, 2, 1, 9, 0, 1, 0, 1,\n",
-       "       7, 5, 3, 8, 8, 0, 6, 0, 9, 0, 0, 4, 8, 2, 6, 4, 8, 1, 9, 0, 4, 5,\n",
-       "       4, 9, 2, 9, 7, 5, 4, 6, 5, 6, 7, 3, 9, 6, 5, 5, 3, 9, 1, 1, 1, 8,\n",
-       "       2, 1, 7, 2, 2, 6, 3, 3, 0, 5, 6, 0, 5, 1, 9, 7, 4, 4, 3, 4, 6, 7,\n",
-       "       0, 5, 6, 6, 6, 0, 7, 1, 4, 0, 9, 8, 2, 7, 2, 1, 2, 3, 7, 8, 0, 9,\n",
-       "       4, 8, 4, 6, 6, 3, 0, 2, 2, 1, 0, 6, 4, 8, 4, 0, 8, 6, 2, 9, 3, 2,\n",
-       "       1, 0, 3, 0, 9, 2, 8, 4, 5, 5, 0, 3, 6, 9, 6, 7, 1, 9, 1, 7, 9, 6,\n",
-       "       8, 2, 5, 1, 7, 0, 6, 3, 0, 2, 2, 3, 3, 5, 6, 5, 6, 3, 3, 0, 8, 3,\n",
-       "       1, 7, 6, 2, 1, 1, 4, 6, 8, 7, 9, 1, 9, 9, 6, 1, 1, 5, 5, 9, 1, 9,\n",
-       "       9, 4, 3, 4, 0, 5, 6, 8, 7, 2, 6, 9, 2, 2, 8, 6, 9, 5, 5, 4, 5, 8,\n",
-       "       6, 1, 3, 8, 8, 1, 4, 1, 0, 3, 0, 5, 5, 4, 0, 7, 7, 5, 5, 3, 3, 8,\n",
-       "       8, 7, 9, 9, 3, 1, 9, 1, 9, 2, 1, 3, 9, 6, 9, 0, 5, 0, 8, 9, 6, 7,\n",
-       "       0, 5, 7, 9, 7, 9, 0, 2, 4, 8, 8, 8, 4, 4, 4, 4, 0, 8, 8, 8, 7, 7,\n",
-       "       4, 9, 9, 2, 5, 1, 3, 4, 4, 9, 1, 8, 3, 8, 4, 0, 2, 7, 1, 3, 6, 8,\n",
-       "       2, 0, 9, 4, 1, 3, 7, 3, 8, 1, 5, 3, 4, 0, 0, 7, 9, 1, 3, 7, 4, 0,\n",
-       "       3, 3, 6, 8, 8, 2, 5, 1, 7, 4, 1, 2])"
+       "array([2, 9, 8, 9, 5, 1, 7, 8, 5, 1, 5, 0, 2, 6, 0, 4, 7, 1, 4, 6, 1, 2,\n",
+       "       9, 4, 0, 2, 5, 9, 1, 4, 8, 9, 3, 3, 6, 5, 4, 3, 2, 8, 6, 0, 8, 4,\n",
+       "       9, 2, 9, 9, 1, 5, 3, 4, 4, 1, 7, 1, 7, 0, 8, 7, 0, 1, 3, 1, 1, 5,\n",
+       "       6, 1, 1, 2, 6, 0, 0, 9, 5, 6, 9, 3, 5, 8, 1, 5, 4, 1, 1, 6, 8, 6,\n",
+       "       9, 1, 8, 9, 7, 6, 0, 7, 7, 6, 6, 1, 4, 0, 0, 9, 6, 1, 1, 9, 0, 4,\n",
+       "       0, 4, 9, 7, 3, 9, 4, 5, 1, 2, 2, 3, 8, 4, 2, 8, 7, 4, 7, 1, 4, 6,\n",
+       "       2, 8, 6, 9, 6, 5, 4, 4, 3, 6, 9, 3, 1, 4, 3, 2, 4, 9, 7, 7, 0, 0,\n",
+       "       5, 6, 4, 3, 8, 9, 1, 0, 6, 6, 7, 8, 1, 0, 0, 3, 3, 3, 2, 6, 6, 0,\n",
+       "       4, 3, 1, 8, 8, 8, 4, 7, 3, 6, 2, 1, 1, 2, 0, 2, 8, 5, 6, 5, 2, 4,\n",
+       "       1, 3, 5, 0, 8, 4, 5, 9, 0, 6, 8, 4, 1, 6, 8, 8, 1, 0, 9, 3, 4, 2,\n",
+       "       4, 2, 7, 5, 7, 1, 3, 9, 7, 1, 3, 7, 5, 1, 9, 3, 3, 7, 7, 2, 2, 3,\n",
+       "       2, 5, 6, 2, 6, 8, 2, 9, 9, 4, 7, 4, 5, 5, 4, 1, 2, 6, 8, 6, 8, 2,\n",
+       "       5, 9, 8, 5, 3, 8, 7, 5, 6, 9, 5, 2, 6, 9, 2, 3, 4, 0, 9, 3, 9, 9,\n",
+       "       7, 3, 9, 4, 1, 9, 9, 6, 8, 7, 8, 1, 5, 2, 9, 7, 4, 0, 3, 4, 6, 4,\n",
+       "       3, 7, 6, 6, 6, 3, 7, 2, 1, 6, 5, 5, 9, 2, 9, 1, 8, 7, 6, 7, 7, 3,\n",
+       "       8, 5, 8, 8, 7, 9, 2, 2, 3, 6, 9, 6, 4, 8, 4, 2, 8, 0, 3, 7, 5, 4,\n",
+       "       6, 2, 6, 5, 4, 4, 6, 2, 8, 5, 8, 4, 5, 3, 0, 4, 0, 1, 6, 0, 3, 1,\n",
+       "       8, 8, 6, 7, 4, 8, 3, 2, 9, 7, 2, 8, 5, 1, 2, 2, 4, 1, 0, 8, 8, 7,\n",
+       "       9, 6, 6, 0, 7, 3, 3, 3, 5, 5, 6, 5, 3, 3, 5, 3, 4, 2, 5, 3, 7, 6,\n",
+       "       1, 8, 6, 1, 2, 0, 0, 5, 2, 5, 7, 8, 0, 6, 6, 7, 0, 7, 2, 5, 2, 3,\n",
+       "       2, 6, 1, 5, 2, 2, 1, 3, 4, 4, 0, 1, 4, 7, 1, 7, 0, 1, 6, 4, 0, 9,\n",
+       "       6, 2, 0, 4, 9, 8, 3, 1, 6, 7, 9, 3, 1, 0, 9, 7, 2, 3, 2, 4, 7, 1,\n",
+       "       5, 1, 1, 9, 1, 9, 5, 6, 0, 1, 1, 3, 7, 5, 2, 4, 7, 1, 4, 6, 6, 9,\n",
+       "       8, 6, 4, 6, 2, 1, 7, 0, 5, 8, 9, 9, 0, 5, 0, 1, 6, 7, 0, 2, 9, 9,\n",
+       "       6, 6, 3, 2, 3, 0, 5, 0, 3, 5, 8, 3])"
       ]
      },
      "execution_count": 6,
@@ -125,29 +119,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "iraqi-colony",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.9851851851851852"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.score(X_train, y_train)"
+    "model.score(X_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "attractive-salem",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +148,7 @@
        "RandomForestClassifier(n_estimators=70)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,41 +161,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "wireless-guidance",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([4, 8, 6, 8, 0, 9, 9, 4, 1, 4, 7, 0, 4, 1, 4, 9, 6, 4, 3, 0, 5, 3,\n",
-       "       0, 0, 6, 8, 7, 4, 0, 6, 7, 2, 4, 4, 7, 8, 1, 4, 9, 5, 3, 8, 3, 2,\n",
-       "       4, 0, 9, 6, 5, 9, 6, 5, 1, 5, 5, 1, 5, 8, 1, 7, 3, 1, 0, 6, 6, 0,\n",
-       "       9, 3, 1, 4, 5, 1, 2, 4, 8, 4, 3, 9, 2, 7, 3, 9, 2, 4, 0, 4, 4, 6,\n",
-       "       4, 8, 0, 0, 9, 1, 0, 4, 8, 5, 4, 0, 6, 7, 6, 4, 4, 7, 2, 1, 7, 2,\n",
-       "       7, 2, 7, 1, 2, 7, 0, 2, 8, 4, 6, 0, 0, 4, 2, 7, 1, 4, 5, 3, 7, 8,\n",
-       "       8, 2, 5, 0, 7, 1, 0, 4, 2, 0, 8, 6, 6, 2, 4, 8, 1, 0, 7, 8, 0, 2,\n",
-       "       0, 1, 9, 3, 0, 1, 5, 7, 1, 3, 8, 9, 2, 0, 3, 2, 2, 0, 3, 7, 9, 2,\n",
-       "       0, 9, 6, 6, 3, 5, 8, 5, 8, 2, 7, 0, 9, 0, 4, 5, 5, 6, 0, 1, 7, 7,\n",
-       "       6, 7, 5, 8, 8, 6, 4, 7, 1, 6, 7, 1, 3, 1, 8, 2, 1, 9, 0, 1, 0, 8,\n",
-       "       7, 5, 3, 8, 8, 0, 6, 0, 9, 0, 0, 4, 8, 2, 6, 4, 8, 1, 9, 0, 4, 5,\n",
-       "       4, 9, 2, 9, 7, 5, 4, 6, 5, 6, 7, 3, 8, 6, 5, 5, 3, 9, 1, 1, 1, 8,\n",
-       "       2, 1, 7, 2, 2, 6, 3, 3, 0, 5, 6, 0, 5, 1, 9, 7, 4, 4, 3, 4, 6, 7,\n",
-       "       0, 5, 6, 6, 6, 0, 7, 1, 4, 0, 9, 8, 2, 7, 2, 1, 2, 3, 7, 8, 0, 9,\n",
-       "       4, 8, 4, 6, 6, 3, 0, 2, 2, 1, 0, 6, 4, 8, 4, 0, 8, 6, 2, 9, 3, 2,\n",
-       "       1, 0, 3, 0, 9, 2, 8, 4, 5, 5, 0, 3, 6, 9, 6, 7, 1, 9, 1, 7, 9, 6,\n",
-       "       8, 2, 5, 1, 7, 0, 6, 5, 0, 2, 2, 3, 3, 5, 6, 5, 6, 3, 3, 0, 8, 3,\n",
-       "       1, 7, 6, 2, 1, 1, 4, 6, 8, 7, 9, 1, 9, 9, 6, 1, 1, 5, 5, 9, 1, 9,\n",
-       "       9, 4, 3, 4, 0, 5, 6, 1, 7, 2, 6, 9, 2, 2, 8, 6, 9, 5, 5, 4, 5, 8,\n",
-       "       6, 1, 3, 8, 8, 1, 4, 1, 0, 3, 0, 5, 5, 4, 0, 7, 7, 5, 5, 3, 3, 8,\n",
-       "       8, 7, 9, 9, 3, 1, 9, 1, 9, 2, 1, 3, 9, 6, 9, 0, 5, 0, 8, 9, 6, 7,\n",
-       "       0, 5, 7, 9, 7, 9, 0, 2, 4, 8, 8, 8, 4, 4, 4, 4, 0, 8, 8, 8, 7, 7,\n",
-       "       4, 9, 9, 2, 5, 1, 3, 4, 4, 9, 1, 8, 3, 8, 4, 0, 2, 7, 1, 3, 6, 8,\n",
-       "       2, 0, 9, 4, 1, 3, 7, 3, 8, 1, 5, 3, 4, 0, 0, 7, 9, 1, 3, 7, 4, 0,\n",
-       "       3, 3, 6, 8, 8, 2, 5, 1, 7, 4, 1, 2])"
+       "array([2, 9, 8, 9, 5, 1, 7, 8, 5, 1, 5, 0, 2, 6, 0, 4, 7, 1, 4, 6, 1, 2,\n",
+       "       9, 4, 0, 2, 5, 9, 1, 4, 8, 9, 3, 3, 6, 5, 4, 3, 2, 8, 6, 0, 8, 4,\n",
+       "       9, 2, 9, 9, 1, 5, 3, 4, 4, 1, 7, 1, 7, 0, 8, 7, 0, 1, 3, 1, 1, 5,\n",
+       "       6, 1, 1, 2, 6, 0, 0, 9, 9, 6, 9, 3, 5, 8, 1, 5, 4, 1, 1, 6, 8, 6,\n",
+       "       9, 1, 8, 9, 7, 6, 0, 7, 7, 6, 6, 1, 4, 0, 0, 9, 6, 1, 1, 9, 0, 4,\n",
+       "       0, 4, 7, 7, 3, 9, 4, 5, 1, 2, 2, 3, 8, 4, 2, 8, 7, 4, 7, 1, 4, 6,\n",
+       "       2, 8, 6, 9, 6, 5, 4, 4, 3, 6, 9, 3, 1, 4, 3, 2, 4, 9, 7, 7, 0, 0,\n",
+       "       5, 6, 4, 3, 8, 9, 1, 0, 6, 6, 7, 8, 1, 0, 0, 3, 3, 3, 2, 6, 6, 0,\n",
+       "       4, 3, 1, 8, 8, 8, 4, 7, 3, 6, 2, 1, 1, 2, 0, 2, 8, 5, 6, 5, 2, 4,\n",
+       "       1, 3, 5, 0, 8, 4, 5, 9, 0, 6, 1, 4, 1, 6, 8, 8, 1, 0, 9, 3, 4, 2,\n",
+       "       4, 2, 7, 5, 7, 1, 3, 7, 7, 1, 9, 7, 5, 1, 9, 3, 3, 7, 7, 2, 2, 7,\n",
+       "       2, 5, 6, 2, 6, 1, 2, 9, 9, 4, 7, 4, 5, 5, 4, 1, 2, 6, 8, 6, 9, 2,\n",
+       "       5, 9, 8, 5, 3, 8, 7, 5, 6, 9, 5, 2, 6, 9, 2, 3, 4, 0, 9, 3, 9, 9,\n",
+       "       7, 3, 9, 4, 1, 9, 9, 6, 8, 7, 8, 1, 5, 2, 9, 7, 4, 0, 3, 4, 6, 4,\n",
+       "       3, 7, 6, 6, 6, 3, 7, 2, 1, 6, 5, 5, 9, 2, 9, 1, 8, 7, 6, 7, 7, 3,\n",
+       "       8, 5, 8, 8, 7, 9, 2, 2, 3, 6, 9, 6, 4, 8, 4, 2, 8, 0, 3, 7, 5, 4,\n",
+       "       6, 2, 6, 5, 4, 4, 6, 2, 8, 5, 8, 4, 5, 3, 0, 4, 0, 1, 6, 0, 3, 1,\n",
+       "       8, 8, 6, 7, 4, 8, 3, 2, 9, 7, 2, 8, 5, 1, 2, 2, 4, 1, 0, 8, 8, 7,\n",
+       "       9, 6, 6, 0, 7, 3, 3, 3, 5, 5, 6, 5, 3, 3, 5, 3, 4, 2, 5, 3, 7, 6,\n",
+       "       1, 8, 6, 1, 2, 0, 0, 5, 2, 5, 7, 8, 0, 6, 6, 7, 0, 7, 2, 5, 2, 3,\n",
+       "       2, 6, 1, 5, 2, 2, 1, 3, 4, 4, 0, 1, 4, 7, 1, 7, 0, 1, 6, 4, 0, 9,\n",
+       "       6, 2, 0, 4, 9, 8, 3, 1, 6, 7, 9, 9, 1, 0, 9, 7, 2, 3, 2, 4, 7, 1,\n",
+       "       5, 1, 1, 9, 1, 9, 5, 6, 0, 1, 1, 3, 7, 5, 2, 4, 7, 1, 4, 6, 6, 9,\n",
+       "       8, 6, 4, 6, 2, 1, 7, 0, 5, 8, 9, 9, 0, 5, 0, 1, 6, 7, 0, 2, 9, 9,\n",
+       "       6, 6, 3, 2, 3, 0, 5, 0, 3, 5, 8, 3])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,8 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "protected-universal",
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -223,22 +213,21 @@
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.9777777777777777"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.score(X_train, y_train)"
+    "model.score(X_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "dangerous-delivery",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,8 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "cutting-information",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +253,7 @@
        " 'target_names']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,8 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "foster-semester",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +394,7 @@
        "[150 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,8 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "million-london",
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -578,7 +564,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,8 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "domestic-benchmark",
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -723,7 +708,7 @@
        "[150 rows x 4 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,8 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "rough-reach",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +740,7 @@
        "Name: target, Length: 150, dtype: int32"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,8 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "sudden-watershed",
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -781,8 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "personal-steps",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,8 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "familiar-percentage",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +783,7 @@
        "RandomForestClassifier(n_estimators=40)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,18 +794,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "contrary-morrison",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2, 1, 0, 2, 1, 1, 1, 2, 2, 2, 1, 2, 1, 0, 1, 1, 2, 0, 1, 2, 0, 1,\n",
-       "       1, 0, 0, 2, 0, 1, 0, 0])"
+       "array([2, 1, 1, 0, 0, 1, 0, 0, 2, 1, 0, 2, 1, 2, 1, 0, 1, 2, 2, 1, 0, 1,\n",
+       "       0, 0, 0, 2, 1, 0, 2, 2])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,59 +815,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "hawaiian-honey",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.9666666666666667"
       ]
      },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model1.score(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "steady-vaccine",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0])"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model1.predict([[4,2,1,0.6]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "id": "informative-execution",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9"
-      ]
-     },
-     "execution_count": 68,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,11 +835,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "raising-thomson",
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model1.predict([[4,2,1,0.6]])"
+   ]
   }
  ],
  "metadata": {
@@ -921,7 +870,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
